cambio de info y add new section

--- a/index.html
+++ b/index.html
@@ -82,11 +82,15 @@
     <!-- INICIO SECTION INTRODUCCION -->
     <section class="container section-intro mt-5 p-2">
       <h3 class="text-center">El proyecto de urbanización más grande de Bell Ville</h3>
-      <p class="text-center">Su entrada Principal se encuentra sobre Calle Cordoba a la altura aproximada de 1900 ( Hoy
-        B° Eduardo Angeloz).
-        En el ingreso <b>se proyecta la Construcción de una Galeria Comercial, de estilo Moderno, con Locales pensados
-          para
-          satisfacer las diferentes necesidades de la zona.</b>
+      <p class="text-center">Nace un nuevo lugar para vivir mejor en Bell Ville,
+        un barrio para encontrarte con la naturaleza a
+        metros de la ciudad.
+        <b>TerraSol es un proyecto urbano para quienes
+          deseen vivir la serenidad de lo natural con el confort
+          propio de un barrio con interesantes propuestas
+          recreativas.</b>
+        Un barrio donde pueden invertir en un presente
+        con gran futuro
       </p>
     </section>
 
@@ -98,21 +102,23 @@
           <div class="col-lg-4 mb-4 text-center">
             <div class="card-info shadow">
               <h3>Lotes</h3>
-              <p>Lotes desde 500 m2 a 800 m2</p>
+              <p>Desde 560 m² a 797 m²</p>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4 text-center">
             <div class="card-info shadow">
-              <h3>Proyecto</h3>
-              <p>Está dividido en 3 etapas de comercialización</p>
+              <h3>Masterplan</h3>
+              <p>Urbanización proyectada en etapas</p>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4 text-center">
             <div class="card-info shadow">
-              <h3>Pago</h3>
-              <p>Pagando de contado, 10% de descuento</p>
+              <h3>Ubicación</h3>
+              <p>Bell Ville, Ruta Nac. 9 Km 501
+                Av. Eduardo Angeloz 2.000
+              </p>
             </div>
           </div>
 
@@ -120,6 +126,28 @@
       </div>
     </section>
 
+    <!-- INICIO UBICACION -->
+    <section class="container section-ubicacion mt-5">
+      <h2 class="text-center">Ubicación</h2>
+      <p class="text-center">
+        Un barrio <b>diseñado y pensado para
+          vivir en la naturaleza, con
+          interesantes propuestas recreativas.</b>
+        Ubicado en la zona de más
+        desarrollo y crecimiento de la
+        ciudad.
+      </p>
+
+      <div class="row">
+        <div class="col-12 col-lg-6">
+          <img src="./assets/primeraEtapa.jpg" alt="img" class="rounded img-fluid">
+        </div>
+        <div class="col-12 col-lg-6">
+          <img src="./assets/loteoAereo.jpg" alt="img" class="rounded img-fluid">
+        </div>
+      </div>
+
+    </section>
 
     <!-- INICIO SERVICIOS -->
     <section class="container section-servicios mt-5 padTop" id="servicios">
@@ -318,15 +346,17 @@
         <div class="row">
 
           <div class="col-lg-4 mb-4 text-center">
-            <div class="card-sobreNos shadow rounded">
-              <h3>Nuestro Equipo</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque fuga, in dolorum explicabo
-                necessitatibus esse?</p>
+            <div class="card-sobreNos shadow rounded h-100">
+              <h3>Quienes Somos ?</h3>
+              <p>
+                Somos una empresa dedicada al desarrollo de barrios para vivienda residencial, con importantes proyectos
+                en diversas etapas de ejecución en provincia de Santa Fe y Córdoba.
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 mb-4 text-center">
-            <div class="card-sobreNos shadow rounded">
+            <div class="card-sobreNos shadow rounded h-100">
               <h3>Experiencia y Trayectoria</h3>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque fuga, in dolorum explicabo
                 necessitatibus esse?</p>
@@ -334,10 +364,16 @@
           </div>
 
           <div class="col-lg-4 mb-4 text-center">
-            <div class="card-sobreNos shadow rounded">
-              <h3>Nuestra Mision</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque fuga, in dolorum explicabo
-                necessitatibus esse?</p>
+            <div class="card-sobreNos shadow rounded h-100">
+              <h3>Como pensamos ?</h3>
+              <p>
+                Todos nuestros proyectos se piensan desde la comodidad del cliente y cuentan con una importante red de
+                servicios, compuesta por alumbrado público, red de baja y media tensión, estabilizado de calles, red de
+                agua y cloacas.
+
+                La accesibilidad es un factor clave en nuestros barrios, por eso planteamos ingresos a todos los
+                desarrollos sobre rutas y principales caminos de la región.
+              </p>
             </div>
           </div>
 
