pequeños detalles sobre html

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
     <h1 class="text-center padTop" id="home">Terrasol - <b>Barrio Abierto</b></h1>
 
     <!-- INICIO SECTION INTRODUCCION -->
-    <section class="container section-intro mt-5 p-2">
-      <h3 class="text-center">El proyecto de urbanización más grande de Bell Ville</h3>
+    <section class="container section-intro p-2">
       <p class="text-center">Nace un nuevo lugar para vivir mejor en Bell Ville,
         un barrio para encontrarte con la naturaleza a
         metros de la ciudad.
@@ -101,6 +100,15 @@
 
           <div class="col-lg-4 mb-4 text-center">
             <div class="card-info shadow">
+              <h3>Ubicación</h3>
+              <p>Bell Ville, Ruta Nac. 9 Km 501
+                Av. Eduardo Angeloz 2.000
+              </p>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mb-4 text-center">
+            <div class="card-info shadow">
               <h3>Lotes</h3>
               <p>Desde 560 m² a 797 m²</p>
             </div>
@@ -113,56 +121,8 @@
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4 text-center">
-            <div class="card-info shadow">
-              <h3>Ubicación</h3>
-              <p>Bell Ville, Ruta Nac. 9 Km 501
-                Av. Eduardo Angeloz 2.000
-              </p>
-            </div>
-          </div>
-
         </div>
       </div>
-    </section>
-
-    <!-- INICIO UBICACION -->
-    <section class="container section-ubicacion mt-5">
-      <h2 class="text-center">Ubicación</h2>
-      <p class="text-center">
-        Un barrio <b>diseñado y pensado para
-          vivir en la naturaleza, con
-          interesantes propuestas recreativas.</b>
-        Ubicado en la zona de más
-        desarrollo y crecimiento de la
-        ciudad.
-      </p>
-
-      <div class="gallery mt-5">
-        <div class="row container-imgUbi">
-          <div class="col-12 col-lg-6">
-            <img src="./assets/primeraEtapa.jpg" class="gallery-item rounded" alt="gallery">
-          </div>
-          <div class="col-12 col-lg-6">
-            <img src="./assets/loteoAereo.jpg" class="gallery-item rounded" alt="gallery">
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal -->
-      <div class="modal fade" id="gallery-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <img src="./assets/primeraEtapa.jpg" class="modal-img" alt="modal img">
-            </div>
-          </div>
-        </div>
-      </div>
-
     </section>
 
     <!-- INICIO SERVICIOS -->
@@ -306,9 +266,49 @@
     </section>
     <!-- FIN SERVICIOS -->
 
+    <!-- INICIO UBICACION -->
+    <section class="container section-ubicacion mt-5">
+      <h2 class="text-center">Ubicación</h2>
+      <p class="text-center">
+        Un barrio <b>diseñado y pensado para
+          vivir en la naturaleza, con
+          interesantes propuestas recreativas.</b>
+        Ubicado en la zona de más
+        desarrollo y crecimiento de la
+        ciudad.
+      </p>
+
+      <div class="gallery mt-5">
+        <div class="row container-imgUbi shadow">
+          <div class="col-12 col-lg-6">
+            <img src="./assets/primeraEtapa.jpg" class="gallery-item rounded" alt="gallery">
+          </div>
+          <div class="col-12 col-lg-6">
+            <img src="./assets/loteoAereo.jpg" class="gallery-item rounded" alt="gallery">
+          </div>
+        </div>
+      </div>
+
+      <!-- Modal -->
+      <div class="modal fade" id="gallery-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <img src="./assets/primeraEtapa.jpg" class="modal-img" alt="modal img">
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <!-- FIN UBICACION -->
+
     <!-- INICIO GALERIA -->
     <section class="container section-carrusel mt-5 padTop" id="galeria">
-      <h2 class="text-center">Imágenes futuristas sobre proyectos planeados de Terrasol.</h2>
+      <h2 class="text-center">Imágenes Ilustrativas sobre futuros proyectos en Terrasol.</h2>
       <p class="text-center">
         <b>Galería Comercial, Estadio de Voley y Complejo de Departamentos</b>.
         Se encontrarían en el ingreso por calle Córdoba.
@@ -373,9 +373,13 @@
 
           <div class="col-lg-4 mb-4 text-center">
             <div class="card-sobreNos shadow rounded h-100">
-              <h3>Experiencia y Trayectoria</h3>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque fuga, in dolorum explicabo
-                necessitatibus esse?</p>
+              <h3>El Proyecto</h3>
+              <p>
+                El proyecto de urbanización más grande de Bell Ville. Además contará con un paseo comercial
+                ubicado
+                sobre calle Córdoba con impronta urbana y arquitectura vanguardista.
+                También habrá un espacio diseñado para la actividad física y recreativa.
+              </p>
             </div>
           </div>
 
