--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Terrasol es un barrio abierto ubicado en Bell Ville que ofrece la serenidad de la naturaleza con el confort de
+    un barrio residencial. Descubre nuestros servicios, ubicación y amenities. ¡Contáctanos para obtener más información!">
+
+  <link rel="icon" href="/./assets/favicon.jpg" type="image/png">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -27,7 +32,7 @@
     emailjs.init('_8jBlctSspVmQys4o')
   </script>
 
-  <title>Terrasol - Inicio</title>
+  <title>Terrasol</title>
 </head>
 
 <body>
