--- a/index.html
+++ b/index.html
@@ -287,29 +287,36 @@
         ciudad.
       </p>
 
-      <div class="gallery mt-5">
-        <div class="row container-imgUbi shadow">
-          <div class="col-12 col-lg-6">
-            <img src="./assets/primeraEtapa.jpg" class="gallery-item rounded" alt="gallery">
+      <div id="carouselExampleIndicators" class="carousel slide carrusel-ubicacion shadow rounded">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./assets/primeraEtapa.jpg" class="d-block w-100" alt="Imagen Ilustrativa">
           </div>
-          <div class="col-12 col-lg-6">
-            <img src="./assets/loteoAereo.jpg" class="gallery-item rounded" alt="gallery">
+          <div class="carousel-item">
+            <img src="./assets/loteoAereo.jpg" class="d-block w-100" alt="Imagen Ilustrativa">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/lotesMarcados.jpg" class="d-block w-100" alt="Imagen Ilustrativa">
           </div>
         </div>
-      </div>
-
-      <!-- Modal -->
-      <div class="modal fade" id="gallery-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <img src="./assets/primeraEtapa.jpg" class="modal-img" alt="modal img">
-            </div>
-          </div>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
 
     </section>
