--- a/index.html
+++ b/index.html
@@ -443,9 +443,9 @@
         </div>
 
         <div class="col-md-4 form-floating mb-4">
-          <input type="number" class="form-control" id="validationCustom02" placeholder="Teléfono/Celular" min="0"
+          <input type="number" class="form-control" id="validationCustom02" placeholder="Tel/Cel: +54-3537-123-456" min="0"
             required>
-          <label for="validationCustom02" class="form-label">Teléfono/Celular</label>
+          <label for="validationCustom02" class="form-label">Tel/Cel: +54 3537-123-456</label>
           <div class="valid-tooltip mjs-bueno">Tu número de celular se ve bien!</div>
           <div class="invalid-tooltip msj-malo">Por favor, ingresa un número de celular válido</div>
         </div>
